Photo add function ADDED  (Bug : after alert, photos still overflowed)

--- a/web/public/css/style.css
+++ b/web/public/css/style.css
@@ -60,7 +60,6 @@
 .PAForm ul li {
     display:inline-block;
     padding: 10px;
-
 }
 .PAForm ul li a {
     text-decoration: none;
@@ -102,6 +101,12 @@
 .AUForm Pointvalue {
     width: 15px ;
 }
+
+.InboxBtnForm{
+
+}
+
+
 .modal {
     display: none; 
     position: fixed; 
@@ -138,6 +143,10 @@
 }
 
 
+
+
+
+
 /* scroll bar style */
 .myBox {
     border: none;
@@ -160,12 +169,12 @@
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: yellowgreen; 
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    background: blue; 
+    box-shadow: inset 0 0 6px rgba(0,0,0,1); 
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #7bac10;
+    background: #3498DB;
 }
 
 
